fix scroll on tablet

--- a/src/scss/components/project.scss
+++ b/src/scss/components/project.scss
@@ -1,81 +1,81 @@
-.section{
-    &--project{
-        .header{
-            @include medium-space-desktop;
-        }
+.section {
+	&--project {
+		.header {
+			@include medium-space-desktop;
+		}
 
-        .content{
-            overflow-y: scroll;
-            height: 80vh;
-            width: 80%;
+		.content {
+			overflow-y: scroll;
+			height: 80vh;
+			// width: 80%;
+			padding-bottom: 3rem;
 
-            &::-webkit-scrollbar {
-                width: 5px;   
-            }
+			&::-webkit-scrollbar {
+				width: 5px;
+			}
 
-            &::-webkit-scrollbar-track {
-                background: #f1f1f1;
-                border-radius: 5px;
-            }
+			&::-webkit-scrollbar-track {
+				background: #f1f1f1;
+				border-radius: 5px;
+			}
 
-            &::-webkit-scrollbar-thumb {
-                width: 100%;
-                background: $lightBlue; 
-                border-radius: 5px;
-            }
-            
-            @media (max-width: $tablet){
-                width: 100%
-            }
+			&::-webkit-scrollbar-thumb {
+				width: 100%;
+				background: $lightBlue;
+				border-radius: 5px;
+			}
 
-            // .player{
-            //     position: absolute;
-            //     filter: brightness(0) invert(1);
-            //     top: 50%;
-            //     left: 50%;
-            //     transform: translate(-50%, -50%);
-            //     z-index: $z_index_max;
-            // }
+			@media (max-width: $tablet) {
+				width: 100%;
+			}
 
-            &__slider{
-                @include small-space-desktop;
-                width: 100%;
-                white-space: nowrap;
-                overflow: hidden;
-                position: relative;
+			// .player{
+			//     position: absolute;
+			//     filter: brightness(0) invert(1);
+			//     top: 50%;
+			//     left: 50%;
+			//     transform: translate(-50%, -50%);
+			//     z-index: $z_index_max;
+			// }
 
+			&__slider {
+				@include small-space-desktop;
+				width: 100%;
+				white-space: nowrap;
+				overflow: hidden;
+				position: relative;
 
-                li{
-                    transition: opacity ease-out 2000ms, transform  ease-in 750ms;
-                    display: inline-block;
-                }
-            }
+				li {
+					transition: opacity ease-out 2000ms, transform ease-in 750ms;
+					display: inline-block;
+				}
+			}
 
-            &__description{
-                @include medium-space-desktop;
-                margin-bottom: 3rem;
-                font-family: $basicText;
+			&__description {
+				@include medium-space-desktop;
+				margin-bottom: 3rem;
+				font-family: $basicText;
 
-                .text{
-                    @include small-space-desktop;
-                }
+				.text {
+					@include small-space-desktop;
+				}
 
-                .list{
-                    @include medium-space-desktop;
+				.list {
+					@include medium-space-desktop;
 
-                    a{
-                        color: $white;
-                    }
-                    
-                    &__item{
-                        @include small-space-desktop;
-                        .icon{
-                            height: 1.8rem;
-                            margin: 0 0 -3px 4px;
-                        }
-                    }
-                }
-            }
-        }
-    }
+					a {
+						color: $white;
+					}
+
+					&__item {
+						@include small-space-desktop;
+						.icon {
+							height: 1.8rem;
+							margin: 0 0 -3px 4px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
